style: fix causing x-scroll visible

--- a/webapp/src/styles.scss
+++ b/webapp/src/styles.scss
@@ -13,6 +13,10 @@
   src: url('/fonts/firago-semibold.ttf'), format('truetype');
 }
 
+body {
+  overflow-x: hidden;
+}
+
 *,
 *::after,
 *::before {
